# bargain-for-me-backend

./: .replit  README.md  api.json  api.py  main.py  main_agent2.py  negotiationtest.py  package-lock.json  package.json  pyproject.toml  replit.nix  test.py  test_agent2.py
Prompts/: BrowsingAgent.py  NegotiationAgent.py  NegotiatorAgent.py  ValidateAgent.py
